# Iris-Flower-Classification

./: CMakeLists.txt  README.md  main.cpp  main.py
include/: dataExtract.hpp  matrix.hpp  matrixHeader.hpp  neuralNetwork.hpp  visualizer.hpp
python code/: main.py
src/: dataExtract.cpp  headers.hpp  main.cpp  matrix.cpp  matrixHeader.hpp  neuralNetwork.cpp  visualizer.cpp
